2007-12-15  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome-external-deps-2.22.modules:
	Updates:
	- cairo -> 1.5.4
	- fontconfig -> 2.5.0
	- gnutls -> 2.0.4
	- opencdk -> 0.6.6

2007-12-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/checkbranches.py, jhbuild/modtypes/tarball.py,
	jhbuild/versioncontrol/darcs.py, jhbuild/versioncontrol/git.py,
	jhbuild/versioncontrol/hg.py, jhbuild/versioncontrol/svn.py,
	jhbuild/versioncontrol/tarball.py: fix minor errors, unused code and
	variables, patch by Craig Keogh, completed and edited by myself.
	(closes: #502282)

2007-12-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/tarball.py: only unpack tarball if necessary, patch
	by Craig Keogh.

2007-12-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/tarball.py: reconfigure tarballs when -a specified,
	patch by Craig Keogh (closes: #502278)

2007-12-15  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* modulesets/gnome-suites-2.22.modules: gnome-python-desktop now
	depends on evolution-data-server; in addition, metacity dependency
	changed to suggestion.

2007-12-15  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.20.modules: branched file-roller for
	gnome-2-20.

2007-12-14  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.20.modules: branched ghex for gnome-2-20.

2007-12-13  William Jon McCann  <mccann@jhu.edu>

	* modulesets/gnome-2.22.modules: Add gnome-settings-daemon.

2007-12-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/tarball.py: don't apply patches on already
	unpacked and patched sources.

2007-12-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/__init__.py, jhbuild/commands/autobuild.py,
	jhbuild/commands/base.py, jhbuild/commands/bootstrap.py,
	jhbuild/commands/checkbranches.py, jhbuild/commands/gui.py,
	jhbuild/main.py: introspect commands to get their name and
	description for --help-commands, patch by John Stowers, slightly
	edited by myself.  (closes: #503491)
