@@ -1,3 +1,11 @@
+2007-12-15  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/modtypes/tarball.py, jhbuild/utils/unpack.py,
+	jhbuild/versioncontrol/tarball.py: use native Python modules to unpack
+	archives when standard tools (tar, gunzip, bunzip2, unzip) are not
+	available; patch by Alberto Ruiz, updated by John Stowers and further
+	edited by myself.  (closes: #499497)
+
 2007-12-15  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* modulesets/gnome-external-deps-2.22.modules:
